feat: add `/similarity` route
